# priority-lfu

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  RELEASE.md
.github/workflows/: benchmark.yml  ci.yml  prepare-release.yml  publish.yml  release.yml
benches/: cache_benchmark.rs
crates/priority-lfu/: Cargo.toml
crates/priority-lfu-derive/: Cargo.toml
crates/priority-lfu-derive/src/: lib.rs
crates/priority-lfu/benches/: README.md  cache_benchmark.rs
crates/priority-lfu/examples/: weighted_keys.rs
crates/priority-lfu/src/: builder.rs  cache.rs  deepsize.rs  erased.rs  guard.rs  lib.rs  metrics.rs  shard.rs  traits.rs
crates/priority-lfu/src/deepsize/: default_impls.rs  external_impls.rs
crates/priority-lfu/tests/: async_tests.rs  integration_tests.rs  property_tests.rs
crates/weighted-cache/: Cargo.toml
crates/weighted-cache-derive/: Cargo.toml
crates/weighted-cache-derive/src/: lib.rs
crates/weighted-cache/benches/: cache_benchmark.rs
crates/weighted-cache/examples/: weighted_keys.rs
crates/weighted-cache/src/: builder.rs  cache.rs  deepsize.rs  erased.rs  guard.rs  lib.rs  metrics.rs  segments.rs  shard.rs  sketch.rs  traits.rs
crates/weighted-cache/src/deepsize/: default_impls.rs  external_impls.rs  test.rs
crates/weighted-cache/tests/: async_tests.rs  integration_tests.rs  property_tests.rs
design/: spec.md
examples/: weighted_keys.rs
src/: builder.rs  cache.rs  erased.rs  guard.rs  lib.rs  segments.rs  shard.rs  sketch.rs  traits.rs
tests/: async_tests.rs  compile_fail.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
tests/ui/: guard_not_send.rs
