[package]
name = "priority-lfu-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Derive macros for the priority-lfu crate."
documentation = "https://docs.rs/priority-lfu-derive/"
keywords = ["cache", "weighted", "derive", "macro"]
categories = ["caching"]

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
