[package]
name = "priority-lfu"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
description = "A high-performance, concurrent, in-memory cache with W-TinyLFU eviction policy and weight-based prioritization."
documentation = "https://docs.rs/priority-lfu/"
keywords = ["cache", "weighted", "priority", "lfu", "eviction"]
categories = ["caching"]

[lib]
bench = false

[features]
default = ["bytes", "chrono", "geo", "uuid", "regex", "rust_decimal"]
metrics = []

[dependencies]
parking_lot.workspace = true
indexmap.workspace = true
ahash.workspace = true
hashbrown.workspace = true
priority-lfu-derive.workspace = true

slotmap = { workspace = true, optional = true }
slab = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
smallvec = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
geo = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true
proptest.workspace = true
trybuild.workspace = true
quick_cache.workspace = true

[[bench]]
name = "cache_benchmark"
harness = false

[lints]
workspace = true
