[package]
name = "weighted-cache-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Derive macros for the weighted-cache crate."
documentation = "https://docs.rs/weighted-cache-derive/"
keywords = ["cache", "weighted", "derive", "macro"]
categories = ["caching"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
