[package]
name = "weighted-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A high-performance, concurrent, in-memory cache with W-TinyLFU eviction policy and weight-based prioritization."
documentation = "https://docs.rs/weighted-cache/"
keywords = ["cache", "weighted", "tinylfu", "lfu", "eviction", "priority"]
categories = ["caching"]

[features]
default = ["chrono", "uuid"]

[dependencies]
parking_lot.workspace = true
crossbeam-queue.workspace = true
indexmap.workspace = true
ahash.workspace = true
weighted-cache-derive.workspace = true

slotmap = { version = "^1", optional = true }
slab = { version = "^0.4", optional = true }
arrayvec = { version = "^0.7", optional = true }
smallvec = { version = "^1", optional = true }
hashbrown = { version = "^0.16", optional = true }
chrono = { version = "^0.4", optional = true }
uuid = { version = "^1.12", optional = true }

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true
proptest.workspace = true
trybuild.workspace = true

[[bench]]
name = "cache_benchmark"
harness = false

[lints]
workspace = true
